feat: add create todo function

--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,4 +1,7 @@
 <form action="/records" method="POST">
-  <input type="text" placeholder="name" name="name">
+  <input type="text" placeholder="名稱" name="name">
+  <input type="Date" placeholder="日期" name="date">
+  <input type="text" placeholder="類別" name="category">
+  <input type="Number" placeholder="金額" name="amount">
   <button type="submit">Create</button>
 </form>
