--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,11 +23,14 @@
       </td>
 
       <td>
-        {{dateFormat this.date "YYYY/MM/DD"}}
+        {{dateFormat this.date "YYYY-MM-DD"}}
       </td>
 
       <td>
         {{this.amount}}
+      </td>
+      <td>
+        <a href="./records/{{ this._id }}/edit">修改</a>
       </td>
     <tr>
       {{/each}}
