--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -27,6 +27,6 @@
     </select>
   </div>
 
-  <button type="submit">儲存修改</button>
-  <button type="submit"><a href="/">Back</a></button>
+  <button type="submit" class="btn btn-primary btn-sm">儲存</button>
+  <a href="/" class="btn btn-primary btn-sm">首頁</a>
 </form>
