--- a/views/index.hbs
+++ b/views/index.hbs
@@ -29,8 +29,15 @@
       <td>
         {{this.amount}}
       </td>
+
       <td>
-        <a href="./records/{{ this._id }}/edit">修改</a>
+        <a href="./records/{{ this._id }}/edit" class="btn btn-primary btn-sm">編輯</a>
+      </td>
+
+      <td>
+        <form action="./records/{{ this._id }}/delete" method="POST" style="display: inline;">
+          <button type="submit" class="btn btn-primary btn-sm">刪除</button>
+        </form>
       </td>
     <tr>
       {{/each}}
