--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,4 +1,4 @@
-<form action="/records/{{ record._id }}/edit" method="POST">
+<form action="/records/{{ record._id }}?_method=PUT" method="POST">
 
   <div class="my-3">
     <label for="name">名稱</label>
