--- a/views/index.hbs
+++ b/views/index.hbs
@@ -70,7 +70,7 @@
         </td>
 
         <td>
-          <form action="./records/{{ this._id }}/delete" method="POST" style="display: inline;">
+          <form action="./records/{{ this._id }}?_method=DELETE" method="POST" style="display: inline;">
             <button type="submit" class="btn btn-primary btn-sm">刪除</button>
           </form>
         </td>
