--- a/views/new.hbs
+++ b/views/new.hbs
@@ -27,6 +27,6 @@
     </select>
   </div>
 
-  <button type="submit">新增支出</button>
+  <button type="submit" class="btn btn-primary">新增支出</button>
 
 </form>
