--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,20 +10,21 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 
-<head>
-  <nav class="navbar navbar-light bg-light" style="padding: 8px 16px background-color: #e95420;">
-    <div class=" container-fluid">
-      <a class="navbar-brand" href="/">
-        <strong>家庭記帳本</strong>
-      </a>
-    </div>
-  </nav>
-</head>
-
 <body>
-  <div class="container" style="position: relative; min-height: 100">
-    {{{ body }}}
-  </div>
+  <header>
+    <nav class="navbar navbar-dark bg-primary" style="padding: 8px 16px">
+      <div class=" container-fluid">
+        <a class="navbar-brand" href="/">
+          <strong>家庭記帳本</strong>
+        </a>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <div class="container" style="position: relative; min-height: 100">
+      {{{ body }}}
+    </div>
+  </main>
   <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
     </script>
@@ -31,7 +32,6 @@
     integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/ff85ca4b77.js" crossorigin="anonymous"></script>
-
 </body>
 
 </html>
