feat: modify index page ui

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,7 +20,7 @@
 
       <button class="btn btn-primary" type="submit">送出</button>
       <a href="/" class="btn btn-outline-secondary">取消篩選</a>
-      <a href="./records/new" class="btn btn-primary">新增支出</a>
+      <a href="./records/new" class="btn btn-danger">新增支出</a>
     </div>
 
   </form>
@@ -71,7 +71,7 @@
 
         <td>
           <form action="./records/{{ this._id }}?_method=DELETE" method="POST" style="display: inline;">
-            <button type="submit" class="btn btn-primary btn-sm">刪除</button>
+            <button type="submit" class="btn btn-danger btn-sm">刪除</button>
           </form>
         </td>
       <tr>
