--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-dark bg-primary" style="padding: 8px 16px">
       <div class=" container-fluid">
         <a class="navbar-brand" href="/">
-          <strong>家庭記帳本</strong>
+          <strong>記帳本</strong>
         </a>
       </div>
     </nav>
