--- a/views/new.hbs
+++ b/views/new.hbs
@@ -28,7 +28,7 @@
       </select>
     </div>
 
-    <button type="submit" class="btn btn-primary mb-3">新增</button>
+    <button type="submit" class="btn btn-primary btn-sm mb-3">新增</button>
 
   </form>
 </div>
