feat: add user modules

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -27,7 +27,7 @@
 
   <div class="card my-3">
     <div class="card-body">
-      <h7 class="card-title"><strong>金額合計：</strong></h7>
+      <h7 class="card-title"><strong>總金額：</strong></h7>
       <h1 class="card-text" style="text-align: right">{{number totalAmount}}
       </h1>
     </div>
