--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,4 +1,4 @@
-<div class="row mt-5">
+<div class="row my-3">
   <div class="col-md-6 m-auto">
     <div class="card card-body">
       <h1 class="text-center mt-3">Login</h1>
@@ -15,6 +15,7 @@
         <button type="submit" class="btn btn-primary btn-block">Login</button>
         <a href="/auth/facebook" class="btn btn-info btn-block">Facebook Login</a>
       </form>
+
       <p class="lead mt-4">
         No Account? <a href="/users/register">Register</a>
       </p>
