--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,8 +15,13 @@
     <nav class="navbar navbar-dark bg-primary" style="padding: 5px 16px">
       <div class=" container-fluid">
         <a class="navbar-brand" href="/">
-          <strong>記帳本</strong>
+          <strong>{{#if isAuthenticated}}{{ user.name}}の{{/if}}記帳本</strong>
         </a>
+        {{#if isAuthenticated}}
+        <a href="/users/logout" class="btn btn-outline-light">Logout</a>
+        {{else}}
+        <a href="/users/login" class="btn btn-outline-light">Login</a>
+        {{/if}}
       </div>
     </nav>
   </header>
