--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -13,19 +13,19 @@
     </div>
 
     <div class="my-3">
-      <label for="amount">金額</label>
-      <input type="Number" name="amount" id="amount" class="form-control" value="{{record.amount}}" required>
-    </div>
-
-    <div class="my-3">
       <label for="categoryName">類別</label>
-      <select class="form-select" aria-label="categoryName" name="categoryName" id="categoryName">
+      <select class="form-select" aria-label="categoryName" name="categoryName" id="categoryName" required>
         <option value="家居物業" {{#is record.categoryId.name "家居物業" }}selected{{/is}}>家居物業</option>
         <option value="交通出行" {{#is record.categoryId.name "交通出行" }}selected{{/is}}>交通出行</option>
         <option value="休閒娛樂" {{#is record.categoryId.name "休閒娛樂" }}selected{{/is}}>休閒娛樂</option>
         <option value="餐飲食品" {{#is record.categoryId.name "餐飲食品" }}selected{{/is}}>餐飲食品</option>
         <option value="其他" {{#is record.categoryId.name "其他" }}selected{{/is}}>其他</option>
       </select>
+    </div>
+
+    <div class="my-3">
+      <label for="amount">金額</label>
+      <input type="Number" name="amount" id="amount" class="form-control" value="{{record.amount}}" required>
     </div>
 
     <button type="submit" class="btn btn-primary btn-sm mb-3">儲存</button>
