--- a/views/new.hbs
+++ b/views/new.hbs
@@ -12,20 +12,20 @@
     </div>
 
     <div class="my-3">
-      <label for="amount">金額</label>
-      <input type="Number" name="amount" id="amount" class="form-control" required>
+      <label for="categoryName">類別</label>
+      <select class="form-select" aria-label="categoryName" name="categoryName" id="categoryName" required>
+        <option value="">請選擇</option>
+        <option value="家居物業">家居物業</option>
+        <option value="交通出行">交通出行</option>
+        <option value="休閒娛樂">休閒娛樂</option>
+        <option value="餐飲食品">餐飲食品</option>
+        <option value="其他">其他</option>
+      </select>
     </div>
 
     <div class="my-3">
-      <label for="categoryName">類別</label>
-      <select class="form-select" aria-label="categoryName" name="categoryName" id="categoryName">
-        <option selected>請選擇</option>
-        <option>家居物業</option>
-        <option>交通出行</option>
-        <option>休閒娛樂</option>
-        <option>餐飲食品</option>
-        <option>其他</option>
-      </select>
+      <label for="amount">金額</label>
+      <input type="Number" name="amount" id="amount" class="form-control" required>
     </div>
 
     <button type="submit" class="btn btn-primary btn-sm mb-3">新增</button>
